# ga-wechat-clawbot

./: .gitignore  AGENTS.md  README.md  config.example.toml  pyproject.toml
docs/: architecture.md  configuration.md
docs/plans/: 2026-05-08-standalone-ga-wechat-clawbot.md
src/ga_wechat_clawbot/: __init__.py  app.py  cli.py  config.py  ga_controller.py  rendering.py  restart_helper.py  session.py  types.py  util.py  wechat_client.py
src/ga_wechat_clawbot/ga/: __init__.py  probe_worker.py  turn_worker.py  worker_common.py
tests/: test_app.py  test_config.py  test_ga_controller.py  test_rendering.py  test_session.py  test_wechat_client.py
