[project]
name = "ga-wechat-clawbot"
version = "0.1.0"
description = "Standalone WeChat Clawbot integration for GenericAgent without modifying the upstream repo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
wechat = [
  "requests>=2.31",
  "pycryptodome>=3.20",
  "qrcode>=7.4",
  "pillow>=10.0",
]
all = [
  "requests>=2.31",
  "pycryptodome>=3.20",
  "qrcode>=7.4",
  "pillow>=10.0",
]

[project.scripts]
ga-wechat-clawbot = "ga_wechat_clawbot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
